// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MKAlert can be dismissed 1`] = `
<div>
  <div>
    Mock Fade
    <div
      class="MuiBox-root css-obqacg"
    >
      <div
        class="MuiBox-root css-1ucrj65"
      >
        Dismissible
      </div>
      <span
        class="css-mqrg1u"
      >
        ×
      </span>
    </div>
  </div>
</div>
`;

exports[`MKAlert renders 1`] = `
<div>
  Mock Fade
  <div
    className="MuiBox-root css-obqacg"
  >
    <div
      className="MuiBox-root css-1ucrj65"
    >
      Hello!
    </div>
  </div>
</div>
`;
